--- a/global.css
+++ b/global.css
@@ -28,6 +28,8 @@
   font-weight: 400;
   --webkit-font-smoothing: antialiased;
   --webkit-overflow-scrolling: touch;
+  image-rendering: auto;
+  
 }
 
 body.dark-mode {
@@ -68,7 +70,6 @@ body.dark-mode {
   z-index: -1000;
   top: 0;
   left: 0;
-
   position: absolute;
   background-color: rgba(0, 0, 0, 0);
   transition: all 0.65s ease-in-out;
@@ -180,9 +181,6 @@ body.dark-mode {
   -webkit-animation-delay: 800ms;
 }
 
-
-
-
 img {
   user-select: none; /* Disable text selection */
   -webkit-user-drag: none; /* Disable image dragging in WebKit browsers */
@@ -200,6 +198,7 @@ img {
 .full-width-line {
   width: 100%;
   height: 1px;
+  
 }
 
 .dark-mode.full-width-line {
@@ -305,7 +304,7 @@ body.fade-in {
     .logo {
       width: 50%;
       flex-shrink: 1;
-      min-width: 150px;
+      margin-top: 4px;
       margin-left: 4px;
     }
     .nav {
@@ -634,7 +633,8 @@ body {
   display: inline-flex;
   width: 20%;
   max-width: 224px;
-  min-width: 200px;
+  min-width: 224px;
+  margin-top: 4px; 
   justify-content: center;
   align-items: center;
   transition: all 0.5s ease-in-out;
